assets/css/styles.css
*{
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    max-width: 1700px;
    margin: 0 auto;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
}

li {
    margin: 0;
}

h1 {
    font-size: 52px;
    line-height: 1.2;
    margin-bottom: 40px;
    letter-spacing: -1.5px;
}

h2 {
    font-size: 40px;
    line-height: 1.2;
    font-weight: 600;
    text-align: center;
    letter-spacing: -1px;
}

h1, h2, h3 {
    /* font-weight: 800; */
    color: rgb(22, 1, 66);
}

p, a {
    color: rgb(50, 50, 50);
    font-size: 18px;
    font-weight: 400;
    line-height: 1.5;
    margin-bottom: 20px;
}

/* Navigation */
/* .nav-container {
    height: 100px;
    display: flex;
    justify-content: space-between;
    align-content: center;
    align-items: center;
    margin-right: 50px;
    margin-left: 50px;
    margin-bottom: 120px;
    margin-top: 20px;
}

.nav-container .logo {
    width: 300px;
    margin-right: 50px;
}

.nav-container ul {
    display: flex;
    justify-content: space-between;
    gap: 50px;
    margin-left: 50px;
}

.nav-container ul a:hover {
    color: black;
    padding-bottom: 10px;
    border-bottom: 2px solid black;
}

.nav-container .cta {
    background-color: green;
    padding: 10px;
    color: white;
    border-radius: 5px;
}

.nav-container .cta:hover {
    background-color: darkgreen;
    color: black;
} */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
}

.header {
    position: sticky;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: rgb(22, 1, 66);
    padding: 0 25px;
    transition: 0.3s;
    margin: 0 0 100px 0;
}

.logo img {
    display: block;
    width: 250px;
    border-radius: 10px;
}

.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: 0.3s;
}

.menu {
    display: flex;
    justify-content: center;
    flex-direction: row;
    align-items: center;
    z-index: 1;
    transition: 0.5s;
}

.menu li a {
    color: white;
    display: block;
    padding: 40px 25px;
    font-size: 18px;
    line-height: 1;
    transition: 0.3s;
    margin: 0;
}

.menu li a:hover {
    box-shadow: 0 -5px 0px white inset,
    500px 0 0 rgba(255,255,255,0.03) inset;
    padding: 35px 25px 45px 25px;
    font-weight: 600;
}

.hamburger {
    position: relative;
    width: 30px;
    height: 4px;
    background: white;
    border-radius: 10px;
    cursor: pointer;
    z-index: 2;
    transition: 0.3s;
}

.hamburger:before,
.hamburger:after {
    content: "";
    position: absolute;
    height: 4px;
    right: 0;
    background: white;
    transition: 0.3s;
}

.hamburger:before {
    top: -10px;
    width: 20px;
    border-radius: 10px;

}

.hamburger:after {
    top: 10px;
    width: 25px;
    border-radius: 10px;
}

.toggle-menu {
    position: absolute;
    width: 30px;
    height: 100%;
    z-index: 3;
    cursor: pointer;
    opacity: 0;
    transition: 0.3s;
}

.hamburger,
.toggle-menu {
    display: none;
}

.navigation input:checked ~ .hamburger {
    background: transparent;
}

.navigation input:checked ~ .hamburger:before {
    top: 0;
    transform: rotate(-45deg);
    width: 30px;
}

.navigation input:checked ~ .hamburger:after {
    top: 0;
    transform: rotate(45deg);
    width: 30px;
}

.navigation input:checked ~ .menu {
    right: 0;
    box-shadow: -20px 0 40px rgba(0,0,0,0.3);
}

@media screen and (max-width:795px) {
    .hamburger,
    .toggle-menu {
    display: block;
    }

    .header {
        padding: 20px 10px;
        transform: 0.3s;
    }

    .menu {
        justify-content: start;
        flex-direction: column;
        align-items: center;
        position: fixed;
        top: 0;
        right: -300px;
        background: rgb(22, 1, 66);
        width: 300px;
        height: 100%;
        padding-top: 65px;
        transition: 0.3s;
    }

    .menu li {
        width: 100%;
    }

    .menu li a {
        padding: 30px;
        font-size: 24px;
        box-shadow: 0 1px 0 rgba(255,255,255,0.1)inset;
    }
}

.main-section {
    display: flex;
    gap: 30px;
    margin-inline: 50px;
    margin-bottom: 150px;
}

.main-section .welcome-text {
    flex: 3;
}

.main-section .hero-img {
    flex: 2;
}

.main-section img {
    width: 100%;
    border-radius: 15px;
}

.main-section ul {
    display: flex;
    gap: 30px;
    justify-content: center;
}

.main-section ul a {
    display: inline-block;
    padding: 10px 15px;
    background-color: green;
    border-radius: 5px;
    color: white;
}

.main-section ul .cta {
    padding: 10px 20px;
    background-color: green;
    border-radius: 5px;
    color: white;
}

.main-section ul a:hover {
    background-color: darkgreen;
    color: black;
}

blockquote {
    margin: 100px 20px 100px 20px;
    padding: 20px 30px;
    border-left: 4px solid green;
    background-color: #e9fbe0;
    border-radius: 0 8px 8px 0;
    line-height: 1.6;
    color: #2a2727;
}

blockquote a {
    color: green;
    display: block;
    text-align: center;
    padding: 10px;
}

blockquote a:hover {
    color: black;
}

#hero-section {
    scroll-margin-top: 40px;
}

main .hero-section {
    margin-top: 160px;
    text-align: center;
    margin-bottom: 100px;
}

main .hero-section .steps {
    margin-top: 80px;
    display: flex;
    justify-content: space-between;
    margin-left: 70px;
    margin-right: 70px;
    margin-bottom: 100px;
}

.steps-card {
    max-width: 300px;
}

#card-2 h3 {
    padding-top: 50px;
    color: green;
}

#card-1 h3 {
    padding-top: 60px;
    color: green;
}

#card-3 h3{
    color: green;
}

.steps-card img {
    width: 100%;
}

.last-card {
    display: flex;
    justify-content: center;
    margin-bottom: 100px;
}

.cta-card {
    background-color: rgb(172, 207, 172);
    text-align: center;
    align-content: center;
    width: 400px;
    height: 250px;
    border-radius: 10px;
    /* box-shadow: 2px 2px 2px 2px black; */
}

.cta-card ul {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin: 0;
}

.cta-card h4 {
    margin-bottom: 20px;
}

.cta-card .primary-btn, .secondary-btn {
    background-color: green;
    padding: 10px 5px;
    display: inline-block;
    border-radius: 10px;
    color: white;
}

.cta-card .primary-btn:hover, .secondary-btn:hover {
    background-color: darkgreen;
    color: black;
}

.socials {
    width: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
    align-items: center;
}

.socials img {
    width: 40px;
    margin: 0;
    gap: 10px;
    transition: transform 0.5s ease-out;
}

.socials img:hover {
    animation: spin 0.6s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* Footer */
footer {
    align-items: center;
    align-content: center;
    text-align: center;
}

.upper-footer {
    margin: 50px 0 80px 0;
}

footer .upper-footer a {
    font-size: 14px;
}

footer .upper-footer a:hover {
    color: darkgreen;
    font-weight: 700;
}

footer p{
    font-size: 12px;
    text-align: center;
}

/* Gallery section */
.gallery-heading {
    height: 100px;
    text-align: center;
}

.gallery-images {
    display: grid;
    grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
    gap:20px;
    margin: 50px 50px;
}

.gallery-images img {
    aspect-ratio: 1/1;
}

#last-card {
    margin: 50px 50px;
}

/* Contact */
.form-container {
    width: 100%;
    justify-content: center;
}

.form-container iframe{
  width:100%;
  height:100vh;
  border:none;
}


/* Responsive */
@media (max-width: 1020px){
    .nav-container {
        margin-bottom: 0;
    }

    header section {
        margin-top: 100px;
    }

    h1 {
        font-size: 35px;
    }
        
    .need {
        margin-top: 0px;
    }

    .steps {
        display: flex;
        flex-direction: column;
        gap: 100px;
    }

    #card-2 h3 {
    padding-top: 20px;
    }

    #card-1 h3 {
    padding-top: 20px;
    }

    #card-3 h3{
    padding-top: 20px;
    }

    .last-card {
        margin-top: 600px;
    }
}

@media (max-width: 950px) {
    header section {
        flex-direction: column;
        text-align: center;
        gap: 50px;
    }

    header section img {
        max-width: 650px;
    }

    h1 {
        font-size: 40px;
    }

    .steps-card {
    max-width: 200px;
    }

    .last-card {
        margin-top: 400px;
    }
}

@media (max-width: 800px){
    h1 {
        font-size: 30px;
    }

    p {
        font-size: 16px;
    }

    .nav-container {
    padding: 0;
    margin: 0;
    }

    .hero-section .text {
        margin-top: 0px;
    }
}

@media (max-width: 600px){
    .nav-container {
        margin-bottom: 80px;
    }
    
    .nav-container .logo {
        margin: 10px 5px;
        width: 220px;
        padding: 0;
    }

    .nav-container ul {
        margin: 0;
        gap: 10px;
    }


    h1 {
        font-size: 28px;
        
    }

    h2 {
        font-size: 32px;
    }

    p , a {
        font-size: 16px;
    }

    h3 {
        font-size: 23px;
    }

    .last-card {
        margin: 500px 60px 100px 60px;
    }

    #last-card {
        margin: 80px 60px 80px 60px;
    }
}

